syntax = "proto3";

package user_service;

option go_package = "../services/user_service";

// ======================
// Mensajes
// ======================

message User {
  int32 user_id = 1;
  string nombre = 2;
  string correo = 3;
  string password = 4;
  string fecha_registro = 5;
  string estado = 6;
  int32 rol_id = 7;
}

message UserSanitizer {
  int32 user_id = 1;
  string nombre = 2;
  string correo = 3;
  string fecha_registro = 4;
  string estado = 5;
  int32 rol_id = 6;
}




// Peticiones
message UserIdRequest {
  int32 user_id = 1;
}

message UserFilterRequest {
  map<string, string> filters = 1;
}

message CreateUserRequest {
  string nombre = 1;
  string correo = 2;
  string password = 3;
  string estado = 4;
  int32 rol_id = 5;
}

message UpdateUserRequest {
  int32 user_id = 1;
  string nombre = 2;
  string correo = 3;
  string password = 4;
  string estado = 5;
  int32 rol_id = 6;
}

message DeleteUserRequest {
  int32 user_id = 1;
}

// Respuestas
message UserListResponse {
  repeated UserSanitizer users = 1;
}

message UserResponse {
  UserSanitizer user = 1;
}

message Empty {}


// ======================
// Servicio
// ======================
service UserService {
  rpc Read(UserFilterRequest) returns (UserListResponse);
  rpc ReadOne(UserIdRequest) returns (UserResponse);
  rpc Insert(CreateUserRequest) returns (UserResponse);
  rpc Update(UpdateUserRequest) returns (UserResponse);
  rpc Delete(DeleteUserRequest) returns (Empty);
}
